# SagiriBot

./: cogs.rar  main.py  prefixes.json  pyproject.toml  requirements.txt  roblox.db  settings.txt
cogs/: OnReady.py  anime.py  discord.txt  fun.py  moderation.py  nhentai.py  roblox.py  useful.py
