[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "firsthandcompatibleoperatingsystem"
version = "0.1.0"
[tool.poetry.dependencies]
discord = "^1.0"
python = "^3.8"
bs4 = "^0.0.1"
tools = "^0.1.9"
qrcode = "^6.1"
[tool.poetry.dev-dependencies]
